--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "datepicker-for-ionic": "^1.1.7",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
